--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/hamburgers.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/swiper-bundle.min.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/nice-select2.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
@@ -109,7 +110,11 @@
                         <div class="form-column">
                             <div class="input-box">
                                 <label for="product-category">Категория товара:</label>
-                                <input id="product-category" type="text" placeholder="Категория товара">
+                                <select id="product-category">
+                                    <option value="1">Big size</option>
+                                    <option value="2">Midle size</option>
+                                    <option value="3">Little size</option>
+                                </select>
                             </div>
                             <div class="input-box">
                                 <label for="cargo-weight">Вес груза (кг):</label>
@@ -122,8 +127,8 @@
                                 <input id="cargo-cost" type="number" placeholder="Введите стоимость" inputmode="numeric">
                             </div>
                             <div class="input-box">
-                                <label for="cargo-volume">Номер телефона:</label>
-                                <input id="cargo-volume" type="number" placeholder="Введите номер телефона" inputmode="tel">
+                                <label for="cargo-volume">Объем груза (м3):</label>
+                                <input id="cargo-volume" type="number" placeholder="Введите объем" inputmode="numeric">
                             </div>
                         </div>
                     </div>
@@ -147,12 +152,14 @@
                     </div>
                     <div class="form-row">
                         <div class="input-box">
-                            <input type="file">
+                            <div class="file-name"></div>
+                            <input id="calculation-file" type="file">
+                            <label for="calculation-file">Загрузить фото товара</label>
                         </div>
                     </div>
                     <a href="#" class="btn btn-primary btn-lg">Следующий шаг<img src="./assets/img/icon-arrow-left.svg" alt="icon-arrow-left"></a>
                 </form>
-                <img src="./assets/img/men-person.png" alt="person">
+                <img src="./assets/img/men-person.png" class="calculation-img" alt="person">
             </div>
         </section>
 
@@ -196,6 +203,7 @@
     </footer>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
+    <script src="assets/js/nice-select2.js"></script>
     <script src="assets/js/custom.js"></script>
 </body>
 
