--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Цены и сроки</a>
+                            <a class="nav-link" href="#">Prices and terms</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Услуги</a>
+                            <a class="nav-link" href="#">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">О компании</a>
+                            <a class="nav-link" href="#">About the company</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Контакты</a>
+                            <a class="nav-link" href="#">Contacts</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Оформить груз</a>
+                            <a class="nav-link" href="#">Register cargo</a>
                         </li>
                     </ul>
-                    <a href="#" class="btn btn-primary">Оставить заявку</a>
+                    <a href="#" class="btn btn-primary">Submit an application</a>
                 </div>
             </div>
         </nav>
@@ -67,30 +67,30 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide" style="background-image: url(./assets/img/banner-1.png);">
                     <div class="container">
-                        <h1 class="banner-title">Прямое КАРГО из Китая</h1>
-                        <h5 class="banner-description">Доставляем любые грузы из Китая по честной цене</h5>
-                        <a href="#" class="btn btn-primary btn-lg">Рассчитать стоимость <img src="./assets/img/icon-arrow-left.svg" alt="icon-arrow-left"></a>
+                        <h1 class="banner-title">Direct CARGO from China</h1>
+                        <h5 class="banner-description">We deliver any cargo from China at a fair price</h5>
+                        <a href="#" class="btn btn-primary btn-lg">Calculate the cost <img src="./assets/img/icon-arrow-left.svg" alt="icon-arrow-left"></a>
                     </div>
                 </div>
                 <div class="swiper-slide" style="background-image: url(./assets/img/banner-2.png);">
                     <div class="container">
-                        <h2 class="banner-title">Выкуп товара с ТаоБао, 1688</h2>
-                        <h5 class="banner-description">Выкуп и доставка товаров с китайских торговых площадок. </h5>
-                        <a href="#" class="btn btn-primary btn-lg">Рассчитать стоимость <img src="./assets/img/icon-arrow-left.svg" alt="icon-arrow-left"></a>
+                        <h2 class="banner-title">Purchase of goods from Taobao, 1688</h2>
+                        <h5 class="banner-description">Purchase and delivery of goods from Chinese trading platforms</h5>
+                        <a href="#" class="btn btn-primary btn-lg">Calculate the cost <img src="./assets/img/icon-arrow-left.svg" alt="icon-arrow-left"></a>
                     </div>
                 </div>
                 <div class="swiper-slide" style="background-image: url(../assets/img/banner-3.png);">
                     <div class="container">
-                        <h2 class="banner-title">Экспресс авто доставка</h2>
-                        <h5 class="banner-description">Доставляем любые грузы из Китая по честной цене</h5>
-                        <a href="#" class="btn btn-primary btn-lg">Рассчитать стоимость <img src="./assets/img/icon-arrow-left.svg" alt="icon-arrow-left"></a>
+                        <h2 class="banner-title">Express car delivery</h2>
+                        <h5 class="banner-description">We deliver any cargo from China at a fair price</h5>
+                        <a href="#" class="btn btn-primary btn-lg">Calculate the cost <img src="./assets/img/icon-arrow-left.svg" alt="icon-arrow-left"></a>
                     </div>
                 </div>
                 <div class="swiper-slide" style="background-image: url(./assets/img/banner-4.png);">
                     <div class="container">
-                        <h2 class="banner-title">Аренда склада</h2>
-                        <h5 class="banner-description">Доставляем любые грузы из Китая по честной цене</h5>
-                        <a href="#" class="btn btn-primary btn-lg">Рассчитать стоимость <img src="./assets/img/icon-arrow-left.svg" alt="icon-arrow-left"></a>
+                        <h2 class="banner-title">Warehouse rental</h2>
+                        <h5 class="banner-description">We deliver any cargo from China at a fair price</h5>
+                        <a href="#" class="btn btn-primary btn-lg">Calculate the cost <img src="./assets/img/icon-arrow-left.svg" alt="icon-arrow-left"></a>
                     </div>
                 </div>
             </div>
@@ -103,13 +103,13 @@
         <section class="calculation">
             <div class="container">
                 <div class="template-title template-title_case-3">
-                    <h2>Получить рассчет стоимости доставки вашего груза</h2>
+                    <h2>Get a quote for the cost of shipping your cargo</h2>
                 </div>
                 <form class="calculation-form">
                     <div class="form-row">
                         <div class="form-column">
                             <div class="input-box">
-                                <label for="product-category">Категория товара:</label>
+                                <label for="product-category">Product category:</label>
                                 <select id="product-category">
                                     <option value="1">Big size</option>
                                     <option value="2">Midle size</option>
@@ -117,18 +117,18 @@
                                 </select>
                             </div>
                             <div class="input-box">
-                                <label for="cargo-weight">Вес груза (кг):</label>
-                                <input id="cargo-weight" type="number" placeholder="Введите вес" inputmode="numeric">
+                                <label for="cargo-weight">Cargo weight (kg):</label>
+                                <input id="cargo-weight" type="number" placeholder="Enter the weight" inputmode="numeric">
                             </div>
                         </div>
                         <div class="form-column">
                             <div class="input-box">
-                                <label for="cargo-cost">Стоимость груза:</label>
-                                <input id="cargo-cost" type="number" placeholder="Введите стоимость" inputmode="numeric">
+                                <label for="cargo-cost">Cost of cargo:</label>
+                                <input id="cargo-cost" type="number" placeholder="Enter the cost" inputmode="numeric">
                             </div>
                             <div class="input-box">
-                                <label for="cargo-volume">Объем груза (м3):</label>
-                                <input id="cargo-volume" type="number" placeholder="Введите объем" inputmode="numeric">
+                                <label for="cargo-volume">Cargo volume (m3):</label>
+                                <input id="cargo-volume" type="number" placeholder="Enter the volume" inputmode="numeric">
                             </div>
                         </div>
                     </div>
@@ -136,17 +136,17 @@
                         <div class="form-column">
                             <div class="input-box">
                                 <input id="insurance" type="checkbox">
-                                <label for="insurance">Страховка</label>
+                                <label for="insurance">Insurance</label>
                             </div>
                             <div class="input-box">
                                 <input id="customs-clearance" type="checkbox">
-                                <label for="customs-clearance">Таможенное оформление</label>
+                                <label for="customs-clearance">Customs clearance</label>
                             </div>
                         </div>
                         <div class="form-column">
                             <div class="input-box">
-                                <label for="hs-code">Код ТН ВЭД:</label>
-                                <input id="hs-code" type="number" placeholder="Введите код">
+                                <label for="hs-code">HS code:</label>
+                                <input id="hs-code" type="number" placeholder="Enter the code">
                             </div>
                         </div>
                     </div>
@@ -154,10 +154,10 @@
                         <div class="input-box">
                             <div class="file-name"></div>
                             <input id="calculation-file" type="file">
-                            <label for="calculation-file">Загрузить фото товара</label>
+                            <label for="calculation-file">Upload a photo of the product</label>
                         </div>
                     </div>
-                    <a href="#" class="btn btn-primary btn-lg">Следующий шаг<img src="./assets/img/icon-arrow-left.svg" alt="icon-arrow-left"></a>
+                    <a href="#" class="btn btn-primary btn-lg">Next step<img src="./assets/img/icon-arrow-left.svg" alt="icon-arrow-left"></a>
                 </form>
                 <img src="./assets/img/men-person.png" class="calculation-img" alt="person">
             </div>
@@ -166,36 +166,36 @@
         <section class="advantages">
             <div class="container">
                 <div class="template-title">
-                    <h2>Почему стоит выбрать именно нас?</h2>
+                    <h2>Why choose us?</h2>
                 </div>
             </div>
         </section>
         <section class="delivery">
             <div class="container">
                 <div class="template-title">
-                    <h2>Варианты доставки грузов из Китая</h2>
+                    <h2>Options for shipping goods from China</h2>
                 </div>
             </div>
         </section <section class="services">
         <div class="container">
             <div class="template-title">
-                <h2>Услуги</h2>
+                <h2>services</h2>
             </div>
         </div>
         </section <section>
         <div class="container">
             <div class="template-title">
-                <h2>Готовы к сотрудничеству?</h2>
-                <h3>Зарегистрируйте груз!</h3>
+                <h2>Ready to collaborate?</h2>
+                <h3>Register cargo</h3>
             </div>
         </div>
         <div class="template-title">
-            <h2>Готовы к сотрудничеству?</h2>
+            <h2>Ready to collaborate?</h2>
         </div>
         <div class="template-title template-title_case-2">
-            <h2>О компании</h2>
+            <h2>About the company</h2>
         </div>
-        >
+
         </section>
     </main>
     <footer>
