--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     <div style="display: flex; gap: 48px">
                         <div class="card">
                             <img
-						src="../assets/img/delivery 1.png"
+						src="./assets/img/delivery 1.png"
 						class="card-img-top"
 						alt="delivery"
 					/>
@@ -302,10 +302,10 @@
                                 <h5 class="card-title">Avia</h5>
                                 <ul class="card__options-list">
                                     <li class="card__options-item">
-                                        <img src="../assets/img/calendar.svg" alt="calendar" />9-15 days
+                                        <img src="./assets/img/calendar.svg" alt="calendar" />9-15 days
                                     </li>
                                     <li class="card__options-item">
-                                        <img src="../assets/img/box.svg" alt="box" />from 5 kg
+                                        <img src="./assets/img/box.svg" alt="box" />from 5 kg
                                     </li>
                                 </ul>
                                 <div class="card__price">
