--- a/index.html
+++ b/index.html
@@ -485,60 +485,34 @@
         </div>
     </section>
 
+    <section class="company">
+        <div class="container">
+            <div class="company-description">
+                <div class="template-title template-title_case-2">
+                    <h2>About the company</h2>
+                </div>
+                <p class="paragraph-1">
+                    Asia Cargo is a full-service logistics company that delivers cargo from China to Ukraine, including consolidated
+                    cargo and full truckloads, Taobao intermediary services, and China-Ukraine cargo transportation. For your
+                    convenience, we offer rates for light and heavy cargo. We have been operating in the market for over 4 years,
+                    and our company's managers have been involved in logistics for over 11 years.
+                </p>
+                <p class="paragraph-2">
+                    We strive to provide the best delivery conditions and the best service to our customers. By choosing us, you are
+                    choosing high-quality delivery that is optimal in terms of price and time! See for yourself!
+                </p>
+            </div>
+            <div class="img-box">
+                <img src="assets/img/company.png" class="company-img" alt="notebook" />
+            </div>
+        </div>
+    </section>
     <section>
         <div class="container">
-            <div style="display: flex; gap: 48px">
-                <div class="card">
-                    <div class="card__img-box" role="img" aria-label="Description of the overall image">
-                        <img src="./assets/img/delivery 1.png" class="card-img-top" alt="delivery" />
-                        <div class="card-body">
-                            <h5 class="card-title">Avia</h5>
-                            <ul class="card__options-list">
-                                <li class="card__options-item">
-                                    <img src="assets/img/calendar.svg" alt="calendar" />
-                9-15 days
-                                </li>
-                                <li class="card__options-item">
-                                    <img src="assets/img/box.svg" alt="box" />
-                from 5 kg
-                                </li>
-                            </ul>
-                            <div class="card__price">
-                                <span>from</span>
-                                <strong>2,5</strong>
-                                <span>$/kg</span>
-                            </div>
-                            <div class="card__btn-row">
-                                <a href="#" class="btn btn-sm btn-primary">submit a request</a>
-                                <a href="#" class="btn btn-sm btn-secondary">more details</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card card_services" style="background-image: url(assets/img/service.png)">
-                    <div class="card-body">
-                        <h5 class="card-title">Goods redemption</h5>
-                        <p class="card-text">
-                            The company provides a full range of logistics services for the delivery of goods from China to Ukraine,
-                            including consolidated cargo and full truckloads, Taobao intermediary services, and China-Ukraine cargo
-                            transportation.
-                        </p>
-                        <div class="card__btn-row">
-                            <a href="#" class="btn btn-sm btn-secondary">more details</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="template-title">
                 <h2>Ready to collaborate?</h2>
                 <h3>Register cargo</h3>
             </div>
-        </div>
-        <div class="template-title">
-            <h2>Ready to collaborate?</h2>
-        </div>
-        <div class="template-title template-title_case-2">
-            <h2>About the company</h2>
         </div>
     </section>
 
