--- a/index.html
+++ b/index.html
@@ -507,6 +507,172 @@
             </div>
         </div>
     </section>
+    <section class="questions">
+        <div class="container">
+            <div class="template-title">
+                <h2>Ready to collaborate?</h2>
+            </div>
+            <div class="questions__row">
+                <div class=".questions-accordion">
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+              <button
+                class="accordion-button"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseOne"
+                aria-expanded="true"
+                aria-controls="collapseOne"
+              >
+                How are shipping costs calculated?
+              </button>
+            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p class="accordion-description">
+                                        Yes, we provide such a service, we can take payment for the goods in China on ourselves. If you do not
+                                        have a foreign currency account, you can pay for the goods in hryvnia to our account.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseTwo"
+                aria-expanded="false"
+                aria-controls="collapseTwo"
+              >
+                How is payment for cargo delivery made?
+              </button>
+            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p class="accordion-description">
+                                        Yes, we provide such a service, we can take payment for the goods in China on ourselves. If you do not
+                                        have a foreign currency account, you can pay for the goods in hryvnia to our account.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseThree"
+                aria-expanded="false"
+                aria-controls="collapseThree"
+              >
+                How is payment for cargo delivery made?
+              </button>
+            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p class="accordion-description">
+                                        Yes, we provide such a service, we can take payment for the goods in China on ourselves. If you do not
+                                        have a foreign currency account, you can pay for the goods in hryvnia to our account.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingFour">
+              <button
+                class="accordion-button"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseFour"
+                aria-expanded="true"
+                aria-controls="collapseFour"
+              >
+                Is it possible to pay for goods to the supplier through you?
+              </button>
+            </h2>
+                            <div id="collapseFour" class="accordion-collapse collapse show" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p class="accordion-description">
+                                        Yes, we provide such a service, we can take payment for the goods in China on ourselves. If you do not
+                                        have a foreign currency account, you can pay for the goods in hryvnia to our account.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingFive">
+              <button
+                class="accordion-button"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseFive"
+                aria-expanded="true"
+                aria-controls="collapseFive"
+              >
+                What is special about CARGO delivery from China?
+              </button>
+            </h2>
+                            <div id="collapseFive" class="accordion-collapse collapse show" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p class="accordion-description">
+                                        Yes, we provide such a service, we can take payment for the goods in China on ourselves. If you do not
+                                        have a foreign currency account, you can pay for the goods in hryvnia to our account.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingSix">
+              <button
+                class="accordion-button"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseSix"
+                aria-expanded="true"
+                aria-controls="collapseOne"
+              >
+                What is the delivery time from China?
+              </button>
+            </h2>
+                            <div id="collapseSix" class="accordion-collapse collapse show" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p class="accordion-description">
+                                        Yes, we provide such a service, we can take payment for the goods in China on ourselves. If you do not
+                                        have a foreign currency account, you can pay for the goods in hryvnia to our account.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <form class="questions-form">
+                    <h3 class="questions-form__title">Any questions?</h3>
+                    <h6 class="questions-form__subtitle">Leave a request and our manager will answer you shortly</h6>
+
+                    <div class="input-box">
+                        <input id="username" type="text" placeholder="Name *" inputmode="text" />
+                    </div>
+                    <div class="input-box">
+                        <input id="number" type="number" placeholder="Number phone *" inputmode="numeric" />
+                    </div>
+                    <div class="input-box">
+                        <input id="email" type="email" placeholder="E-mail" inputmode="email" />
+                    </div>
+                    <div class="input-box">
+                        <textarea id="" placeholder="Our request"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-lg">
+                        Send a request
+                        <img src="assets/img/icon-arrow-left.svg" class="arrow-left" alt="icon-arrow-left" />
+                    </button>
+                </form>
+            </div>
+        </div>
+    </section>
     <section>
         <div class="container">
             <div class="template-title">
