--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                 <h2>Ready to collaborate?</h2>
             </div>
             <div class="questions__row">
-                <div class=".questions-accordion">
+                <div class="questions-accordion">
                     <div class="accordion" id="accordionExample">
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingOne">
@@ -584,17 +584,17 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingFour">
               <button
-                class="accordion-button"
+                class="accordion-button collapsed"
                 type="button"
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseFour"
-                aria-expanded="true"
+                aria-expanded="false"
                 aria-controls="collapseFour"
               >
                 Is it possible to pay for goods to the supplier through you?
               </button>
             </h2>
-                            <div id="collapseFour" class="accordion-collapse collapse show" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
                                     <p class="accordion-description">
                                         Yes, we provide such a service, we can take payment for the goods in China on ourselves. If you do not
@@ -606,17 +606,17 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingFive">
               <button
-                class="accordion-button"
+                class="accordion-button collapsed"
                 type="button"
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseFive"
-                aria-expanded="true"
+                aria-expanded="false"
                 aria-controls="collapseFive"
               >
                 What is special about CARGO delivery from China?
               </button>
             </h2>
-                            <div id="collapseFive" class="accordion-collapse collapse show" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+                            <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
                                     <p class="accordion-description">
                                         Yes, we provide such a service, we can take payment for the goods in China on ourselves. If you do not
@@ -628,17 +628,17 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingSix">
               <button
-                class="accordion-button"
+                class="accordion-button collapsed"
                 type="button"
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseSix"
-                aria-expanded="true"
-                aria-controls="collapseOne"
+                aria-expanded="false"
+                aria-controls="collapseSix"
               >
                 What is the delivery time from China?
               </button>
             </h2>
-                            <div id="collapseSix" class="accordion-collapse collapse show" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
+                            <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
                                     <p class="accordion-description">
                                         Yes, we provide such a service, we can take payment for the goods in China on ourselves. If you do not
@@ -651,7 +651,11 @@
                 </div>
                 <form class="questions-form">
                     <h3 class="questions-form__title">Any questions?</h3>
-                    <h6 class="questions-form__subtitle">Leave a request and our manager will answer you shortly</h6>
+                    <h6 class="questions-form__subtitle">
+          Leave a request and our manager
+          <br />
+          will answer you shortly
+        </h6>
 
                     <div class="input-box">
                         <input id="username" type="text" placeholder="Name *" inputmode="text" />
